--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">DesafioHF</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Harry Potter Cards</string>
     <string name="card_name">Nome do card</string>
 
     <string name="ca_name">Nome do card:</string>
